Backfill engineering_design for plant and SynCom communities

--- a/kb/communities/At_RSPHERE_SynCom.yaml
+++ b/kb/communities/At_RSPHERE_SynCom.yaml
@@ -10,6 +10,19 @@ description: 'A synthetic bacterial community derived from the Arabidopsis root 
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: RHIZOSPHERE
+engineering_design:
+  objective: A synthetic bacterial community derived from the Arabidopsis root microbiota culture collection (At-RSPHERE), representing 16 bacterial families isolated from Arabidopsis thaliana roots grown in natural soil.
+  assembly_strategy: Engineered 6-member consortium configured for rhizosphere objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Bacterial diversity, Assembly size.'
+  evidence:
+  - reference: doi:10.1038/nature16192
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: Using defined bacterial communities and a gnotobiotic Arabidopsis plant system we show that the isolates form assemblies resembling natural microbiota on their cognate host organs, but are also capable of ectopic leaf or root colonization
 environment_term:
   preferred_term: rhizosphere
   term:
