--- a/kb/communities/Chlamydomonas_Bacterial_H2_Consortium.yaml
+++ b/kb/communities/Chlamydomonas_Bacterial_H2_Consortium.yaml
@@ -9,6 +9,19 @@ description: 'A synthetic algae-bacteria consortium for sustainable hydrogen pro
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: PHYTOPLANKTON
+engineering_design:
+  objective: 'A synthetic algae-bacteria consortium for sustainable hydrogen production, composed of the green alga Chlamydomonas reinhardtii and three bacterial species: Microbacterium forte sp.'
+  assembly_strategy: Engineered 4-member consortium configured for phytoplankton objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Light, Cell density.'
+  evidence:
+  - reference: PMID:38159768
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: "Still, under non\u2011hydrogen producing conditions (aerobiosis) the Chlamydomonas-M"
 environment_term:
   preferred_term: laboratory bioreactor
   term:
