--- a/kb/communities/Coscinodiscus_Synthetic_Community.yaml
+++ b/kb/communities/Coscinodiscus_Synthetic_Community.yaml
@@ -11,6 +11,20 @@ description: 'A synthetic marine phytoplankton community consisting of the large
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: PHYTOPLANKTON
+engineering_design:
+  objective: A synthetic marine phytoplankton community consisting of the large centric diatom Coscinodiscus radiatus and four phylogenetically distinct bacterial isolates from different marine bacterial lineages.
+  assembly_strategy: Engineered 5-member consortium configured for phytoplankton objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Marine medium, Light.'
+  evidence:
+  - reference: PMID:36300970
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: No synergistic effects between bacteria in the presence of the diatom was observed
+    explanation: Demonstrates diatom provision of organic nutrients to bacteria
 environment_term:
   preferred_term: marine environment
   term:
