--- a/kb/communities/EcoFAB_Ring_Trial_SynCom17.yaml
+++ b/kb/communities/EcoFAB_Ring_Trial_SynCom17.yaml
@@ -16,6 +16,22 @@ description: 'A 17-member synthetic bacterial community (SynCom17) used in a sta
 ecological_state: ENGINEERED
 community_origin: SYNTHETIC
 community_category: RHIZOSPHERE
+engineering_design:
+  objective: A 17-member synthetic bacterial community (SynCom17) used in a standardized inter-laboratory ring trial across five international laboratories (LBNL, UNC Chapel Hill, Max Planck Cologne, Forschungszentrum Julich, U Melbourne) to study root microbiome recruitment and exudate composition of the model grass Brachypodium distachyon in EcoFAB 2.0 fabricated ecosystem devices.
+  assembly_strategy: Bottom-up synthetic assembly of a 17-member consortium from selected isolates/strains.
+  measurement_endpoints:
+  - 16S amplicon-based community composition profiling
+  - Metabolite profiling and exchange analysis
+  - Growth and phenotype readouts
+  - Genome-informed trait and pathway annotation
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Nitrogen Source, Light Regime.'
+  evidence:
+  - reference: PMID:40920748
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: Paraburkholderia sp. OAS925 could dramatically shift microbiome composition
+    explanation: Documents competitive exclusion by Paraburkholderia across multiple labs
 environment_term:
   preferred_term: EcoFAB 2.0 hydroponic device
   term:
