--- a/kb/communities/Lotus_LjSC3.yaml
+++ b/kb/communities/Lotus_LjSC3.yaml
@@ -11,6 +11,19 @@ description: 'A 16-member synthetic community (Lj-SC3) derived from Lotus japoni
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: RHIZOSPHERE
+engineering_design:
+  objective: A 16-member synthetic community (Lj-SC3) derived from Lotus japonicus roots and nodules, designed to study host preference and community assembly dynamics in legume-microbe interactions.
+  assembly_strategy: Engineered 10-member consortium configured for rhizosphere objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Host plant species, Nodulation status.'
+  evidence:
+  - reference: PMID:34312531
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: Sequential inoculation experiments revealed priority effects during root microbiota assembly, where established communities are resilient to invasion by latecomers, and that host preference of commensal bacteria confers a competitive advantage in their cognate host
 environment_term:
   preferred_term: rhizosphere
   term:
