--- a/kb/communities/Sorghum_SRC1_Subset.yaml
+++ b/kb/communities/Sorghum_SRC1_Subset.yaml
@@ -11,6 +11,19 @@ description: 'A simplified synthetic rhizosphere community (SRC1-subset) derived
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: RHIZOSPHERE
+engineering_design:
+  objective: A simplified synthetic rhizosphere community (SRC1-subset) derived from the larger SRC1 consortium for enhancing sorghum bioenergy crop productivity.
+  assembly_strategy: Engineered 7-member consortium configured for rhizosphere objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Community design strategy, Community size.'
+  evidence:
+  - reference: doi:10.1093/ismejo/wrae126
+    supports: SUPPORT
+    evidence_source: IN_VIVO
+    snippet: Here, we engineered a synthetic rhizosphere community (SRC1) with the anticipation that it would exhibit a selective advantage in colonizing the host Sorghum bicolor, thereby potentially fostering its growth
 environment_term:
   preferred_term: rhizosphere
   term:
