--- a/kb/communities/Soybean_N_Fixation_sfSynCom.yaml
+++ b/kb/communities/Soybean_N_Fixation_sfSynCom.yaml
@@ -9,6 +9,19 @@ description: 'A simplified synthetic community (sfSynCom) for enhanced symbiotic
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: RHIZOSPHERE
+engineering_design:
+  objective: A simplified synthetic community (sfSynCom) for enhanced symbiotic nitrogen fixation in soybean, based on core-helper strain interactions.
+  assembly_strategy: Engineered 4-member consortium configured for rhizosphere objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Quorum sensing regulation, Nodulation efficiency.'
+  evidence:
+  - reference: PMID:40052412
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: Two of these helper strains assigned to the Pantoea taxon produce acyl homoserine lactones, which significantly enhanced the colonization and infection of soybean by BXYD3
 environment_term:
   preferred_term: rhizosphere
   term:
