--- a/kb/communities/Synechococcus_Ecoli_SPC.yaml
+++ b/kb/communities/Synechococcus_Ecoli_SPC.yaml
@@ -9,6 +9,20 @@ description: 'A synthetic, light-driven consortium pairing the cyanobacterium Sy
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: OTHER
+engineering_design:
+  objective: A synthetic, light-driven consortium pairing the cyanobacterium Synechococcus elongatus PCC 7942 (engineered to secrete sucrose via the cscB+ transporter) with Escherichia coli.
+  assembly_strategy: Engineered 2-member consortium configured for other objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Light, NaCl (Osmotic Pressure).'
+  evidence:
+  - reference: PMID:28127397
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: We previously engineered a model cyanobacterium, Synechococcus elongatus PCC 7942, to secrete the bulk of the carbon it fixes as sucrose, a carbohydrate that can be utilized by many other microbes
+    explanation: Demonstrates the core cross-feeding interaction
 environment_term:
   preferred_term: laboratory bioreactor
   term:
