--- a/kb/communities/Wheat_Consortium_C6.yaml
+++ b/kb/communities/Wheat_Consortium_C6.yaml
@@ -8,6 +8,19 @@ description: 'A synthetic 4-member rhizosphere consortium (C6) for biocontrol of
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: RHIZOSPHERE
+engineering_design:
+  objective: A synthetic 4-member rhizosphere consortium (C6) for biocontrol of Rhizoctonia solani in wheat.
+  assembly_strategy: Engineered 3-member consortium configured for rhizosphere objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Target pathogen, Biocontrol mechanism.'
+  evidence:
+  - reference: PMID:36118206
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: Further, the mechanisms of interaction of the tested bacteria with each other and plants were explored
 environment_term:
   preferred_term: rhizosphere
   term:
