--- a/kb/communities/Dangl_SynComm_35.yaml
+++ b/kb/communities/Dangl_SynComm_35.yaml
@@ -11,6 +11,22 @@ description: 'A 35-member synthetic community (SynComm 35) composed of genome-se
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: RHIZOSPHERE
+engineering_design:
+  objective: A 35-member synthetic community (SynComm 35) composed of genome-sequenced bacterial strains representing typical taxonomic diversity of Arabidopsis root commensals.
+  assembly_strategy: Engineered 8-member consortium configured for rhizosphere objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: MAMP Treatment, Plant Age.'
+  evidence:
+  - reference: doi:10.1073/pnas.2100678118
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: Significance In natural environments, plants establish intimate interactions with a wide diversity of microbes
+    explanation: 'The community specifically suppresses a transcriptional sector of plant immunity, demonstrating that commensal bacteria actively modulate host immune responses
+
+      '
 environment_term:
   preferred_term: rhizosphere
   term:
