Backfill engineering_design for biomining and bioprocess communities

--- a/kb/communities/Aspergillus_Indium_LED_Recovery.yaml
+++ b/kb/communities/Aspergillus_Indium_LED_Recovery.yaml
@@ -17,6 +17,20 @@ description: 'An engineered fungal monoculture bioplatform based on Aspergillus 
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: BIOMINING
+engineering_design:
+  objective: An engineered fungal monoculture bioplatform based on Aspergillus niger for sustainable recovery of indium from waste liquid crystal display (LCD) and light-emitting diode (LED) panels through indirect bioleaching.
+  assembly_strategy: Engineered single-member platform represented in community schema for interoperability with multi-member systems.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Bioleaching Temperature, Fermentation Temperature.'
+  evidence:
+  - reference: PMID:34111782
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: Carboxy groups from organic acids and proteins were the critical substances to release H+ for leaching indium mainly competed with iron via reactions analysis
+    explanation: Quantifies organic acid production profile
 environment_term:
   preferred_term: laboratory bioreactor
   term:
