--- a/kb/communities/Bayan_Obo_REE_Tailings_Consortium.yaml
+++ b/kb/communities/Bayan_Obo_REE_Tailings_Consortium.yaml
@@ -17,6 +17,20 @@ description: 'An acid-producing bacterial consortium engineered to extract rare 
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: BIOMINING
+engineering_design:
+  objective: An acid-producing bacterial consortium engineered to extract rare earth elements (REE) from tailings at the Bayan Obo mine in Inner Mongolia, China, the world's largest rare earth deposit.
+  assembly_strategy: Engineered 3-member consortium configured for biomining objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: pH, Bioleaching Duration.'
+  evidence:
+  - reference: doi:10.1016/j.cej.2024.153492
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: The development of efficient environmental cleanup materials is a crucial scientific and technological concern
+    explanation: Establishes acidolysis as primary bioleaching mechanism
 environment_term:
   preferred_term: mine tailing
   term:
