--- a/kb/communities/Industrial_Bioreactor_Consortium.yaml
+++ b/kb/communities/Industrial_Bioreactor_Consortium.yaml
@@ -18,6 +18,20 @@ description: 'An industrial-scale moderately thermophilic acidophilic microbial 
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: BIOMINING
+engineering_design:
+  objective: An industrial-scale moderately thermophilic acidophilic microbial consortium operating in continuous and batch bioreactors for metal extraction from sulfide ores and concentrates.
+  assembly_strategy: Engineered 8-member consortium configured for biomining objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Moderate Thermophilic Temperature Range, Extreme Acidity and pH Succession.'
+  evidence:
+  - reference: PMID:24242252
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: The results show that the culture consisted mainly of four species, including Leptospirillum ferriphilum, Acidithiobacillus caldus, Sulfobacillus acidophilus, and Ferroplasma thermophilum, before adapting to a pulp density of 4%
+    explanation: Establishes dominance and operational conditions
 environment_term:
   preferred_term: bioreactor
   term:
