--- a/kb/communities/MAMC_M48_Lignocellulose.yaml
+++ b/kb/communities/MAMC_M48_Lignocellulose.yaml
@@ -9,6 +9,19 @@ description: 'A minimal active microbial consortium (MAMC-M48) for lignocellulos
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: LIGNOCELLULOSE
+engineering_design:
+  objective: A minimal active microbial consortium (MAMC-M48) for lignocellulose degradation, optimized through reductive screening from 18 candidate strains.
+  assembly_strategy: Engineered 5-member consortium configured for lignocellulose objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Substrate, Degradation efficiency.'
+  evidence:
+  - reference: PMID:29392382
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: Enriched microbial communities, obtained from environmental samples through selective processes, can effectively contribute to lignocellulose degradation
 environment_term:
   preferred_term: soil
   term:
