--- a/kb/communities/Mixed_Gallium_LED_Recovery_Consortium.yaml
+++ b/kb/communities/Mixed_Gallium_LED_Recovery_Consortium.yaml
@@ -16,6 +16,20 @@ description: 'An engineered acidophilic microbial consortium specifically design
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: BIOMINING
+engineering_design:
+  objective: An engineered acidophilic microbial consortium specifically designed for recovering gallium from waste light-emitting diodes (LEDs) through non-contact bioleaching.
+  assembly_strategy: Engineered 3-member consortium configured for biomining objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Extreme Acidity for Gallium Dissolution, LED Waste Pulp Density.'
+  evidence:
+  - reference: doi:10.1016/j.jece.2025.120403
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: Results showed the significant promotion by bioelectricity on ammonium and total nitrogen by 7.80-8.14 %
+    explanation: Quantifies gallium recovery performance
 environment_term:
   preferred_term: contaminated soil
   term:
