--- a/kb/communities/Thermophilic_Pyrite_QS_Consortium.yaml
+++ b/kb/communities/Thermophilic_Pyrite_QS_Consortium.yaml
@@ -16,6 +16,20 @@ description: 'A moderately thermophilic three-species bioleaching consortium use
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: BIOMINING
+engineering_design:
+  objective: A moderately thermophilic three-species bioleaching consortium used to study the effects of quorum sensing (QS) signaling on pyrite and chalcopyrite dissolution.
+  assembly_strategy: Engineered 3-member consortium configured for biomining objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Temperature, pH.'
+  evidence:
+  - reference: doi:10.3389/fmicb.2025.1592588
+    supports: SUPPORT
+    evidence_source: IN_VIVO
+    snippet: In addition, DSF compounds induced Acidithiobacillus caldus motility and dispersion from pyrite with a concomitant expansion of Leptospirillum ferriphilum on the mineral surface while in contrast, the acyl-homoserine lactone mediated QS system repressed L
+    explanation: Links QS signaling to regulation of iron oxidation and mineral dissolution
 environment_term:
   preferred_term: mine tailing
   term:
