--- a/kb/communities/Trichoderma_Lactate_Platform.yaml
+++ b/kb/communities/Trichoderma_Lactate_Platform.yaml
@@ -10,6 +10,19 @@ description: 'A heterogeneous 3-member consortium for direct conversion of ligno
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: LIGNOCELLULOSE
+engineering_design:
+  objective: A heterogeneous 3-member consortium for direct conversion of lignocellulose to short-chain fatty acids (SCFAs), specifically butyric acid.
+  assembly_strategy: Engineered 3-member consortium configured for lignocellulose objectives.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: Oxygen gradient, Inoculation scheme.'
+  evidence:
+  - reference: PMID:32855308
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: We developed a versatile consortium-based strategy for the direct conversion of lignocellulose to short-chain fatty acids, which included the funneling of the lignocellulosic carbohydrates to lactate as a central intermediate in engineered food chains
 environment_term:
   preferred_term: laboratory bioreactor
   term:
