Refine plant SynCom engineering_design metadata from review feedback

--- a/kb/communities/At_RSPHERE_SynCom.yaml
+++ b/kb/communities/At_RSPHERE_SynCom.yaml
@@ -11,8 +11,8 @@ ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: RHIZOSPHERE
 engineering_design:
-  objective: A synthetic bacterial community derived from the Arabidopsis root microbiota culture collection (At-RSPHERE), representing 16 bacterial families isolated from Arabidopsis thaliana roots grown in natural soil.
-  assembly_strategy: Engineered 6-member consortium configured for rhizosphere objectives.
+  objective: Define Arabidopsis root-associated communities from the At-RSPHERE isolate collection for reductionist host-microbiome experiments.
+  assembly_strategy: Bottom-up assembly from cultured Arabidopsis root isolates in At-RSPHERE; experiments use variable subset sizes (5 to 20 members), and this record currently curates a representative 6-taxon subset.
   measurement_endpoints:
   - Interaction-level mechanistic characterization
   - Member-level abundance and persistence tracking
