--- a/kb/communities/Chlamydomonas_Bacterial_H2_Consortium.yaml
+++ b/kb/communities/Chlamydomonas_Bacterial_H2_Consortium.yaml
@@ -10,8 +10,8 @@ ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: PHYTOPLANKTON
 engineering_design:
-  objective: 'A synthetic algae-bacteria consortium for sustainable hydrogen production, composed of the green alga Chlamydomonas reinhardtii and three bacterial species: Microbacterium forte sp.'
-  assembly_strategy: Engineered 4-member consortium configured for phytoplankton objectives.
+  objective: Engineer a synthetic algae-bacteria consortium for sustainable hydrogen production using Chlamydomonas reinhardtii with Microbacterium forte sp. nov., Bacillus cereus, and Stenotrophomonas goyi sp. nov.
+  assembly_strategy: Bottom-up assembly from axenic Chlamydomonas reinhardtii co-cultured with three bacterial isolates selected from the naturally associated community.
   measurement_endpoints:
   - Interaction-level mechanistic characterization
   - Member-level abundance and persistence tracking
@@ -21,7 +21,7 @@ engineering_design:
   - reference: PMID:38159768
     supports: SUPPORT
     evidence_source: IN_VITRO
-    snippet: "Still, under non\u2011hydrogen producing conditions (aerobiosis) the Chlamydomonas-M"
+    snippet: Still, under non-hydrogen producing conditions (aerobiosis), the Chlamydomonas-bacterial consortium remained stable and sustained algal growth without accumulating hydrogen.
 environment_term:
   preferred_term: laboratory bioreactor
   term:
