--- a/kb/communities/Chlorella_Rhizobium_Bioflocculation.yaml
+++ b/kb/communities/Chlorella_Rhizobium_Bioflocculation.yaml
@@ -15,7 +15,7 @@ community_origin: ENGINEERED
 community_category: PHYTOPLANKTON
 engineering_design:
   objective: A co-culture system pairing the microalgae Chlorella vulgaris with the bioflocculant-producing bacterium Rhizobium radiobacter F2 for enhanced algal harvesting in wastewater treatment applications.
-  assembly_strategy: Engineered 2-member consortium configured for phytoplankton objectives.
+  assembly_strategy: Bottom-up co-culture assembled from axenic Chlorella vulgaris and Rhizobium radiobacter F2 at defined inoculation ratios to optimize bioflocculation.
   measurement_endpoints:
   - Interaction-level mechanistic characterization
   - Member-level abundance and persistence tracking
