--- a/kb/communities/Coscinodiscus_Synthetic_Community.yaml
+++ b/kb/communities/Coscinodiscus_Synthetic_Community.yaml
@@ -13,7 +13,7 @@ community_origin: ENGINEERED
 community_category: PHYTOPLANKTON
 engineering_design:
   objective: A synthetic marine phytoplankton community consisting of the large centric diatom Coscinodiscus radiatus and four phylogenetically distinct bacterial isolates from different marine bacterial lineages.
-  assembly_strategy: Engineered 5-member consortium configured for phytoplankton objectives.
+  assembly_strategy: Bottom-up assembly by co-culturing axenic Coscinodiscus radiatus with four individually isolated marine bacterial strains.
   measurement_endpoints:
   - Interaction-level mechanistic characterization
   - Member-level abundance and persistence tracking
