--- a/kb/communities/Dangl_SynComm_35.yaml
+++ b/kb/communities/Dangl_SynComm_35.yaml
@@ -13,7 +13,7 @@ community_origin: ENGINEERED
 community_category: RHIZOSPHERE
 engineering_design:
   objective: A 35-member synthetic community (SynComm 35) composed of genome-sequenced bacterial strains representing typical taxonomic diversity of Arabidopsis root commensals.
-  assembly_strategy: Engineered 8-member consortium configured for rhizosphere objectives.
+  assembly_strategy: Bottom-up assembly of a 35-member synthetic community from genome-sequenced Brassicaceae root and soil isolates spanning suppressor and non-suppressor phenotypes.
   measurement_endpoints:
   - Interaction-level mechanistic characterization
   - Member-level abundance and persistence tracking
@@ -23,10 +23,8 @@ engineering_design:
   - reference: doi:10.1073/pnas.2100678118
     supports: SUPPORT
     evidence_source: IN_VITRO
-    snippet: Significance In natural environments, plants establish intimate interactions with a wide diversity of microbes
-    explanation: 'The community specifically suppresses a transcriptional sector of plant immunity, demonstrating that commensal bacteria actively modulate host immune responses
-
-      '
+    snippet: We report that root-associated commensal bacteria actively suppress the host immune response in the context of a synthetic bacterial community.
+    explanation: Supports use of a defined synthetic community to measure suppression of specific plant immune responses.
 environment_term:
   preferred_term: rhizosphere
   term:
