--- a/kb/communities/Maize_Root_Simplified_Community.yaml
+++ b/kb/communities/Maize_Root_Simplified_Community.yaml
@@ -12,7 +12,7 @@ community_origin: ENGINEERED
 community_category: RHIZOSPHERE
 engineering_design:
   objective: A representative 7-member bacterial community from maize rhizosphere, developed through selective iterations to model root-associated microbiome function.
-  assembly_strategy: Engineered 8-member consortium configured for rhizosphere objectives.
+  assembly_strategy: Bottom-up assembly of seven bacterial maize-rhizosphere isolates selected through host-mediated simplification; plant host context is represented separately.
   measurement_endpoints:
   - Interaction-level mechanistic characterization
   - Member-level abundance and persistence tracking
