--- a/kb/communities/Sorghum_SRC1_Subset.yaml
+++ b/kb/communities/Sorghum_SRC1_Subset.yaml
@@ -13,7 +13,7 @@ community_origin: ENGINEERED
 community_category: RHIZOSPHERE
 engineering_design:
   objective: A simplified synthetic rhizosphere community (SRC1-subset) derived from the larger SRC1 consortium for enhancing sorghum bioenergy crop productivity.
-  assembly_strategy: Engineered 7-member consortium configured for rhizosphere objectives.
+  assembly_strategy: Bottom-up assembly from the SRC1 culture collection using network-guided strain selection; the reported SRC1-subset spans 16 to 20 strains, with a representative curated subset here.
   measurement_endpoints:
   - Interaction-level mechanistic characterization
   - Member-level abundance and persistence tracking
