--- a/kb/communities/Soybean_N_Fixation_sfSynCom.yaml
+++ b/kb/communities/Soybean_N_Fixation_sfSynCom.yaml
@@ -11,7 +11,7 @@ community_origin: ENGINEERED
 community_category: RHIZOSPHERE
 engineering_design:
   objective: A simplified synthetic community (sfSynCom) for enhanced symbiotic nitrogen fixation in soybean, based on core-helper strain interactions.
-  assembly_strategy: Engineered 4-member consortium configured for rhizosphere objectives.
+  assembly_strategy: Bottom-up assembly from isolates, with a Bradyrhizobium core symbiont combined with helper strains selected to improve root colonization and nodulation.
   measurement_endpoints:
   - Interaction-level mechanistic characterization
   - Member-level abundance and persistence tracking
