--- a/kb/communities/Synechococcus_Bacillus_SPC.yaml
+++ b/kb/communities/Synechococcus_Bacillus_SPC.yaml
@@ -10,7 +10,7 @@ community_origin: ENGINEERED
 community_category: OTHER
 engineering_design:
   objective: A synthetic, light-driven consortium pairing the cyanobacterium Synechococcus elongatus PCC 7942 (engineered to secrete sucrose via the cscB+ transporter) with Bacillus subtilis 168.
-  assembly_strategy: Engineered 2-member consortium configured for other objectives.
+  assembly_strategy: Bottom-up co-culture assembled from engineered sucrose-secreting Synechococcus elongatus PCC 7942 and Bacillus subtilis 168 in defined medium under continuous illumination.
   measurement_endpoints:
   - Interaction-level mechanistic characterization
   - Member-level abundance and persistence tracking
