--- a/kb/communities/Synechococcus_Yarrowia_SPC.yaml
+++ b/kb/communities/Synechococcus_Yarrowia_SPC.yaml
@@ -10,7 +10,7 @@ community_origin: ENGINEERED
 community_category: OTHER
 engineering_design:
   objective: A synthetic, light-driven consortium pairing the cyanobacterium Synechococcus elongatus PCC 7942 (engineered to secrete sucrose via the cscB+ transporter) with the oleaginous yeast Yarrowia lipolytica Po1g.
-  assembly_strategy: Engineered 2-member consortium configured for other objectives.
+  assembly_strategy: Bottom-up co-culture of engineered Synechococcus elongatus PCC 7942 cscB+ and Yarrowia lipolytica Po1g in defined medium under light-driven sucrose cross-feeding conditions.
   measurement_endpoints:
   - Interaction-level mechanistic characterization
   - Member-level abundance and persistence tracking
