--- a/kb/communities/Wheat_Consortium_C1.yaml
+++ b/kb/communities/Wheat_Consortium_C1.yaml
@@ -10,7 +10,7 @@ community_origin: ENGINEERED
 community_category: RHIZOSPHERE
 engineering_design:
   objective: A synthetic 3-member rhizosphere consortium (C1) for biocontrol of soilborne fungal pathogens in wheat.
-  assembly_strategy: Engineered 3-member consortium configured for rhizosphere objectives.
+  assembly_strategy: Bottom-up assembly from wheat rhizosphere isolates selected for antifungal activity against soilborne pathogens, combined into a defined 3-member consortium.
   measurement_endpoints:
   - Interaction-level mechanistic characterization
   - Member-level abundance and persistence tracking
