--- a/kb/communities/Wheat_Consortium_C6.yaml
+++ b/kb/communities/Wheat_Consortium_C6.yaml
@@ -9,8 +9,8 @@ ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: RHIZOSPHERE
 engineering_design:
-  objective: A synthetic 4-member rhizosphere consortium (C6) for biocontrol of Rhizoctonia solani in wheat.
-  assembly_strategy: Engineered 3-member consortium configured for rhizosphere objectives.
+  objective: Study biocontrol of Rhizoctonia solani AG8 with the C6 wheat-rhizosphere synthetic consortium; this record currently captures three named members from the reported four-member design.
+  assembly_strategy: Bottom-up assembly from wheat rhizosphere isolates selected for antifungal compatibility; the reported C6 design is four members, with three explicitly curated here.
   measurement_endpoints:
   - Interaction-level mechanistic characterization
   - Member-level abundance and persistence tracking
