--- a/kb/communities/Lotus_LjSC3.yaml
+++ b/kb/communities/Lotus_LjSC3.yaml
@@ -12,8 +12,8 @@ ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: RHIZOSPHERE
 engineering_design:
-  objective: A 16-member synthetic community (Lj-SC3) derived from Lotus japonicus roots and nodules, designed to study host preference and community assembly dynamics in legume-microbe interactions.
-  assembly_strategy: Engineered 10-member consortium configured for rhizosphere objectives.
+  objective: Study host preference and assembly dynamics with the Lotus japonicus Lj-SC3 synthetic community derived from Lj-SPHERE root and nodule isolates.
+  assembly_strategy: Bottom-up assembly from cultured Lj-SPHERE isolates; the source study defines a 16-member community, and this record currently curates 10 representative taxa.
   measurement_endpoints:
   - Interaction-level mechanistic characterization
   - Member-level abundance and persistence tracking
